--- a/index.html
+++ b/index.html
@@ -4,7 +4,75 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- welcome section -->
+    <section class="top-banner flexible-content">
+        <div class="half-width"">
+          <h1>Welcome To</h1>
+          <h1><span class="orange-color">Mithun Aorko</span> World!</h1>
+          <h2>MERN Stack Developer</h2>
+          <p>
+            I’m a full-stack Web Application Developer Specializing in the MERN
+            Stack. I would like to developing web apps using with (MongoDB,
+            ExpressJS, ReactJS and NodeJS) stack technologies. So, don't
+            hesitate and contact me so that we may have a discussion about your
+            project.
+          </p>
+          <a
+            class="link-btn"
+            target="_blank"
+            href="https://www.linkedin.com/in/mmaorko/"
+            >HERE ME</a
+          >
+        </div>
+        <div class="half-width">
+          <img src="images/aorko_main_bg.png" alt="Main Image">
+        </div>
+    </section>
+
+    <!-- dream big section -->
+
+    <section class="dream-banner flexible-content">
+      <div class="half-width">
+        <img src="images/my-bg2.png" alt="">
+      </div>
+      <div class="half-width">
+        <h1>Dream Big</h1>
+        <h2>Become a web developer</h2>
+        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        <a class="link-btn" target="_blank" href="#">RESUME HERE</a>
+      </div>
+    </section>
+
+    <!-- Experience section -->
+
+    <section class="experience-area">
+      <h1 class="content-heading">Experiences</h1>
+      <div class="flexible-content">
+        <div class="developer-area" id="exp-left">
+          <h2>Full Stack Web Developer</h2>
+          <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+          <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+
+        <div class="developer-area" id="exp-right">
+          <h2>Baby Web Developer</h2>
+          <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
+          <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p>© Mithun MOndal Aorko 2022, a Programming Hero Student.</p>
+    </footer>
+  </body>
 </html>
