--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             class="link-btn"
             target="_blank"
             href="https://www.linkedin.com/in/mmaorko/"
-            >HERE ME</a
+            >HIRE ME</a
           >
         </div>
         <div class="half-width">
